@@ -1,5 +1,9 @@
 2004-12-08  Christophe Fergeau  <teuf@gnome.org>
 
+	* Makefile.am: don't override CFLAGS, fixes #2033
+
+2004-12-08  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml:
 	* freedesktop.org.xml.in: change main mp3 mime type to audio/mpeg,
 	add audio/x-mp3 as an alias for this mime type.
